ignore lib because it contains generated code

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # ignore actual source code, because it is supplied by the generator test
 src/main/*
+lib/
 
 # ignore generated tests
 *.generated.scala
